--- a/style.css
+++ b/style.css
@@ -288,12 +288,12 @@ img{
     align-items: flex-start;
     justify-content: center;
 }
-.lia{
+.liab{
     justify-content: center;
     list-style:none;
     display: flex;
 }
-.lia p{
+.liab p{
     flex-wrap: wrap;
     margin-left: 15px;
     font-size: 15px;
@@ -302,7 +302,7 @@ img{
 }
 .fa-solid{
     color: yellow;
-    margin-top: 18px;
+    margin-bottom: -30px;
 }
 @media screen and (max-width: 830px){
     .abaoutcont{
@@ -316,4 +316,374 @@ img{
    
 }
   /* ################ fin Abaout ############### */
+  /* ################ Formation ############### */
+  .formation{
+    height: auto;
+    display: flex;
+    color: white;
+    width: 90%;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .div1{
+    border-style : solid;
+    border-color : #0a1014 #0a1014 #EF2E41 #0a1014;
+    border-width : 10px 30px 60px  30px ;
+    width: 40%;
+    height: 10%;
+    margin-top: 20px;
+  }
+  .div1 h1{
+        font-size: 30px;
+        color: white;
+        text-align: center;
+        margin-bottom: -50px;
+  }
+  .detail{
+    background-color: black;
+    width: 90%;
+    height: 95%;
+    border-radius: 20px;
+  }
+  .detail p{
+        margin: 15px;
+        font-size: 20px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  .ula{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+.lia{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.ecole{
+    margin-left: 15px;
+    font-size: 20px;
+    font-weight: 600;
+    flex-wrap:wrap;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.ecoledesc{
+    border-bottom: solid;
+    font-size: 18px;
+    flex-wrap:wrap;
+}
+.date{
+    font-size: 20px;
+    font-weight: 600;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+    color: bisque;
+}
+.fa-solid{
+    font-size: 30px;
+    margin-top: -30px;
+}
+@media screen and (max-width: 830px){
+    .formation{
+        width: 100%;
+        
+    }
+    .detail{
+        width: 100%;
+    }
+}
+  /* ################ fin formation ############### */
+  /* ################ competence ############### */
+  .competence{
+    height: auto;
+    display: flex;
+    color: white;
+    width: 90%;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 40px;
+  }
+  .div2{
+    border-style : none;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    background-color: yellow;
+    width: 250px;
+    height: 10%;
+}
+.competence h1{
+   font-size: 30px;
+   color: blue;
+   text-align: center;
+   margin-top: 11px;
+   font-weight: 700;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.itemcomp{
+    background-color:green;
+    width: 90%;
+    height: 95%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+}
+h2{
+    color: yellow;
+    text-align: center;
+}
+.frontend{
+    min-width: 50%;
+    height: 95%;
+    margin: 10px 0px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.ulitem{
+    display: flex;
+    margin: 0;
+    flex-wrap: wrap;
+    padding: 0;
+    width: 90%;
+}
+.ulitem li{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    margin: 10px;
+    max-width: 270px;
+}
+.ulitem img{
+    width: 60px;
+    height: 50px;
+    margin-right: 10px;
+    align-self: center;
+    border-radius: 15%;
+}
+.ulitem p{
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 10px;
+    color: white;
+}
+.backend{
+    min-width: 50%;
+    height: 95%;
+    margin: 10px 0px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+@media screen and (max-width:823px) {
+    .itemcomp{
+        flex-direction: column;}
+}
+  /* ################ fin competence ############### */
+  /* ################ Projet ############### */
+ .projet{
+    height: auto;
+    display: flex;
+    color: white;
+    width: 90%;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 40px;
+    background-color: #EF2E41;
+    border-radius: 50px;
+ }
+ .div3{
+    border-style : none;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    background-color: yellow;
+    width: 250px;
+    height: 10%;
+}
+.div3 h1{
+   font-size: 30px;
+   color: blue;
+   text-align: center;
+   margin-top: 11px;
+   font-weight: 700;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.detailprojet{
+    width: 90%;
+    height: auto;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.detailprojet h2{
+    color: yellow;
+    text-align: center;
+}
+.descleft{
+    width: 50%;
+    height: 95%;
+    margin: 10px 0px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.descright{
+    width: 50%;
+    height: 95%;
+    margin: 10px 0px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.ulprojet{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+.descp{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+    width: 90%;
+}
+.descp p{
+    font-size: 20px;
+    font-weight: 700;
+}
+.tech{
+    width: 90%;
+    margin-right: 50px;
+    height: 95%;
+    align-self: center;
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.tech li{
+    list-style: none;
+    color: white;
+    margin-top: 5px;
+    border: 1px solid beige;
+    padding: 5px;
+    background-color: #008080;
+    text-align: center;
+    font-size: 18px;
+}
+.tech p{
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 10px;
+    color: white;
+}
+.contvideo{
+    max-width: 100%;
+    height: auto;align-self: center;
+    border-radius: 15px;
+}
+.video{
+    max-width: 100%;
+    height: auto;align-self: center;
+    border-radius: 15px;
+}
+@media screen and (max-width:723px) {
+    .tech{
+        grid-template-columns: repeat(2, 1fr);}
+  
+}
+@media screen and (max-width:823px) {
+ .detailprojet{
+     flex-direction: column;}
+    .descleft{
+        width: 100%;
+    }
+    .descright{
+        width: 100%;
+    }
+ 
+}
+  /* ################ fin Projet ############### */
+  /* ################ Contact ############### */
+  .contact{
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    height: auto;
+    display: flex;
+    color: white;
+    width: 90%;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 40px;
+  }
+  .contactInfo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 10px;
+  }
+  .contactInfo h1{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: 25px;
+    color:white;
+    background-color:orange ;
+    width: 200px;
+    border-radius:10px;
+}
+.ulcontact{
+    display: flex;
+    justify-content: center;
+    align-content:center;
+    flex-direction: column;
+    padding: 0 10px 10px 10px;
+    width: 90%;
+    height: 95%;
+    border-radius: 5px;
+    flex-wrap: wrap;
+}
+.ulcontact li{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    margin-left: 25px;
+}
+.ulcontact li p{
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 15px;
+    margin-left: 15px;
+    color: white;
+    flex-wrap: wrap;
+
+}
+.ulcontact li a{
+    text-decoration: none;
+    font-size: 14px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 15px;
+    margin-left: 15px;
+    color: blue;
+    flex-wrap: wrap;
+    width: 300px;
+
+}
+  /* ################ fin Contact ############### */
   
